# OOF_UNET

./: pyproject.toml  requirements.txt
csv/: Dataset001_final.csv  Dataset001_final_test.csv  Dataset001_final_train.csv
execs/: train.sh  train_amp.sh
execs/wandb/: latest-run
execs/wandb/run-20250328_183822-pxenotd8/: run-pxenotd8.wandb
execs/wandb/run-20250328_183822-pxenotd8/files/: wandb-metadata.json
execs/wandb/run-20250328_184034-as4wep7b/: run-as4wep7b.wandb
execs/wandb/run-20250328_184034-as4wep7b/files/: config.yaml  wandb-metadata.json
execs/wandb/run-20250328_184119-e39xgatd/: run-e39xgatd.wandb
execs/wandb/run-20250328_184119-e39xgatd/files/: requirements.txt  wandb-metadata.json
notebooks/: Dataset001_final_test.csv  tets.ipynb
oof_unet/: README.md  constants.py  data.py  oof_trainer.py  requirements.txt  train.py  train_baseline_unet.py  train_baseline_unet_amp.py  unet.py
oof_unet/data_utils/: datasets.py  samplers.py
oof_unet/loss_functions/: __init__.py  loss_functions.py
oof_unet/trainers/: amp_trainer.py  base_trainer.py  improved_trainer.py
